--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -16,9 +16,13 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/home_fragment_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_movies_top_list"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
