--- a/app/src/main/res/layout/item_home_top_recycler.xml
+++ b/app/src/main/res/layout/item_home_top_recycler.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="item"
+            type="com.watermelon.moviesapp.model.response.Movie" />
 
-    <androidx.cardview.widget.CardView
+        <variable
+            name="listener"
+            type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="225dp"
-        android:layout_margin="@dimen/margin8dp"
-        app:cardCornerRadius="@dimen/margin8dp"
-        app:cardElevation="4dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="225dp"
+            android:layout_margin="@dimen/margin8dp"
+            app:cardCornerRadius="@dimen/margin8dp"
+            app:cardElevation="4dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/item_image"
@@ -27,32 +33,21 @@
                 android:layout_margin="@dimen/margin4dp"
                 android:background="@color/white"
                 android:scaleType="centerCrop"
+                app:image = "@{item.posterPath}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/avatars" />
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floating_action_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="16dp"
+                android:contentDescription="@string/play"
+                app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
 
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
+        </androidx.cardview.widget.CardView>
 
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/floating_action_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|right"
-                    android:layout_margin="16dp"
-                    android:contentDescription="play"
-                    app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
-
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
