--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/homeFragment"
         android:name="com.watermelon.moviesapp.ui.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/home_fragment">
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_searchFragment"
             app:destination="@id/searchFragment" />
@@ -18,7 +18,7 @@
         android:id="@+id/searchFragment"
         android:name="com.watermelon.moviesapp.ui.search.SearchFragment"
         android:label="SearchFragment"
-        tools:layout="@layout/search_fragment">
+        tools:layout="@layout/fragment_search">
         <action
             android:id="@+id/action_searchFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
