--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -12,5 +12,10 @@
         android:icon="@drawable/ic_baseline_search_24"
         android:title="search"
         android:color="@color/logger"/>
+    <item
+        android:id="@+id/tvFragment"
+        android:icon="@drawable/ic_baseline_live_tv_24"
+        android:title="Tv"
+        android:color="@color/logger"/>
 
 </menu>
