--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.viewModels.MainViewModel" />
+            type="com.watermelon.moviesapp.ui.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
