--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.viewModels.SearchViewModel" />
+            type="com.watermelon.moviesapp.ui.search.SearchViewModel" />
 
     </data>
 
