--- a/app/src/main/res/layout/item_home_top_recycler.xml
+++ b/app/src/main/res/layout/item_home_top_recycler.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="item"
-            type="com.watermelon.moviesapp.model.response.Movie" />
+            type="com.watermelon.moviesapp.model.response.movie.Movie" />
 
         <variable
             name="listener"
