--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -13,6 +13,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/search_results"
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:onClick="@{() -> listener.onItemClicked(item)}"
