--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -5,7 +5,7 @@
 
     <data>
         <variable
-            name="detailsViewModel"
+            name="viewModel"
             type="com.watermelon.moviesapp.ui.details.DetailsViewModel" />
 
     </data>
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
             android:layout_marginTop="16dp"
-            android:text="The Plot"
+            android:text="@{viewModel.movieDetails.toData().title}"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:fontFamily="@font/archivo_black"
@@ -55,6 +55,7 @@
             android:layout_marginEnd="35dp"
             android:fontFamily="@font/basic"
             android:lines="2"
+            android:text="@{viewModel.movieDetails.toData().overview}"
             android:textColor="@color/gray_text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,12 +63,12 @@
             tools:text="TextView  TextView  TextView  TextView  TextView  TextView  TextView  TextView  " />
 
         <TextView
-            android:id="@+id/Director"
+            android:id="@+id/director"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
             android:layout_marginTop="16dp"
-            android:text="Director :"
+            android:text="@string/director"
             android:textColor="@color/blue_text_color"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/move_description" />
@@ -80,7 +81,7 @@
             android:layout_marginTop="16dp"
             android:text="director_name"
             android:textColor="@color/gray_text_color"
-            app:layout_constraintStart_toEndOf="@+id/Director"
+            app:layout_constraintStart_toEndOf="@+id/director"
             app:layout_constraintTop_toBottomOf="@+id/move_description" />
 
         <TextView
@@ -92,7 +93,7 @@
             android:text="Writers :"
             android:textColor="@color/blue_text_color"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Director" />
+            app:layout_constraintTop_toBottomOf="@+id/director" />
 
         <TextView
             android:id="@+id/writers_name"
