--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -134,6 +134,7 @@
             android:layout_marginStart="35dp"
             android:layout_marginTop="16dp"
             android:orientation="horizontal"
+            app:items="@{viewModel.credits.toData().cast}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
