feat : change home background color

--- a/app/src/main/res/drawable/shape_search_bar.xml
+++ b/app/src/main/res/drawable/shape_search_bar.xml
@@ -7,5 +7,5 @@
         android:width="1dp"
         android:color="@color/searchStroke" />
 
-    <corners android:radius="@dimen/search_bar_corners_radius" />
+    <corners android:radius="16dp" />
 </shape>
