--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background_color"
         tools:context=".HomeActivity">
 
         <androidx.fragment.app.FragmentContainerView
@@ -27,7 +28,7 @@
             android:id="@+id/bubbleTabBar"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:background="#FFF"
+            android:background="@color/background_color"
             android:elevation="16dp"
             android:padding="7dp"
             app:bubbletab_menuResource="@menu/bottom_navigation"
