--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -5,17 +5,17 @@
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home"
         android:checked="true"
-        android:color="@color/home"/>
+        android:color="@color/icons"/>
 
     <item
         android:id="@+id/searchFragment"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="search"
-        android:color="@color/logger"/>
+        android:color="@color/icons"/>
     <item
         android:id="@+id/tvFragment"
         android:icon="@drawable/ic_baseline_live_tv_24"
         android:title="Tv"
-        android:color="@color/logger"/>
+        android:color="@color/icons"/>
 
 </menu>
