--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="background_color">#22282d</color>
     <color name="blue_text_color">#4c97c4</color>
     <color name="gray_text_color">#75787b</color>
+    <color name="cards_color">#2b3c47</color>
 
 
     <color name="searchStroke">#AACAB3</color>
