--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:elevation="1dp"
+            app:tint="@color/gray_text_color"
             android:src="@drawable/ic_baseline_close_24"
             android:transitionName="@string/clear_transition"
             app:layout_constraintBottom_toBottomOf="@+id/search_bar"
@@ -49,7 +50,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:inputType="text"
-            android:background="@color/cards_color"
             android:afterTextChanged="@{()->viewModel.searchForMovie()}"
             android:text="@={viewModel.movieTitle}"
             android:transitionName="@string/search_transition"
@@ -63,7 +63,7 @@
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginVertical="12dp"
-            android:background="@color/lightGrey"
+            android:background="@color/gray_text_color"
             android:transitionName="@string/line_transition"
             app:layout_constraintEnd_toEndOf="@+id/search_bar"
             app:layout_constraintStart_toStartOf="@+id/search_bar"
