--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -16,7 +16,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/search_results"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="150dp"
+        style="@style/SearchBar"
         android:onClick="@{() -> listener.onItemClicked(item.id)}"
         android:layout_marginVertical="@dimen/margin2x"
         android:layout_marginHorizontal="@dimen/margin8dp">
@@ -26,6 +27,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
+            android:elevation="16dp"
             app:image ="@{item.posterPath}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@{item.originalTitle}"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/text20sp"
             android:layout_marginStart="@dimen/margin28dp"
             app:layout_constraintStart_toEndOf="@id/item_image"
@@ -51,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin4dp"
-            android:textColor="@color/black"
+            android:textColor="@color/gray_text_color"
             android:textSize="@dimen/text20sp"
             android:text="@{String.valueOf(item.voteAverage)}"
             android:layout_marginStart="@dimen/margin28dp"
@@ -67,6 +69,7 @@
             android:text="@{item.title}"
             android:ellipsize="end"
             android:gravity="center"
+            android:textColor="@color/gray_text_color"
             android:lines="1"
             android:layout_marginTop="35dp"
             android:textSize="@dimen/text18sp"
