--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="icons">#61aedc</color>
     <color name="background_color">#22282d</color>
+    <color name="status_bar_color">#39424A</color>
+
     <color name="blue_text_color">#4c97c4</color>
     <color name="gray_text_color">#75787b</color>
     <color name="cards_color">#2b3c47</color>
