--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,23 +3,23 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home"
+        android:title="@string/home"
         android:checked="true"
-        android:color="@color/home"/>
+        android:color="@color/icons"/>
 
     <item
         android:id="@+id/searchFragment"
         android:icon="@drawable/ic_baseline_search_24"
-        android:title="search"
-        android:color="@color/logger"/>
+        android:title="@string/search"
+        android:color="@color/icons"/>
     <item
         android:id="@+id/tvFragment"
         android:icon="@drawable/ic_baseline_live_tv_24"
-        android:title="Tv"
-        android:color="@color/logger"/>
+        android:title="@string/tv"
+        android:color="@color/icons"/>
     <item
         android:id="@+id/fragment_main"
         android:icon="@drawable/ic_baseline_live_tv_24"
-        android:title="main"
-        android:color="@color/logger"/>
+        android:title="@string/main"
+        android:color="@color/icons"/>
 </menu>
