--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"
             app:showWhenSuccess="@{viewModel.person}"
+            app:image="@{viewModel.person.toData().imagePath}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
