--- a/app/src/main/res/layout/item_home_middle_recycler.xml
+++ b/app/src/main/res/layout/item_home_middle_recycler.xml
@@ -4,7 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="item"
+            type="com.watermelon.moviesapp.model.response.movies.Movies" />
 
+        <variable
+            name="listener"
+            type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -22,22 +28,24 @@
                 android:layout_height="155dp"
                 android:background="@color/white"
                 android:scaleType="centerCrop"
+                app:image="@{item.posterPath}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="@dimen/margin4dp"
                 tools:src="@tools:sample/avatars"/>
 
-
             <TextView
                 android:id="@+id/text_move_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin4dp"
                 android:layout_marginTop="@dimen/margin4dp"
+                android:text="@{item.title}"
                 android:textColor="@color/black"
-                android:textStyle="bold"
                 android:textSize="@dimen/text20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_image"
                 tools:text="movie name" />
 
@@ -45,11 +53,13 @@
                 android:id="@+id/movie_director_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin4dp"
                 android:layout_marginTop="@dimen/margin8dp"
+                android:text="@{item.mediaType}"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text12sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_move_name"
                 tools:text="movie director name" />
 
@@ -57,21 +67,15 @@
                 android:id="@+id/movie_rate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin4dp"
                 android:layout_marginTop="@dimen/margin8dp"
+                android:text="@{String.valueOf(item.popularity)}"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text12sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/movie_director_name"
                 tools:text="9.9" />
-
-
-
-
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </androidx.cardview.widget.CardView>
 </layout>
