--- a/app/src/main/res/layout/item_home_top_recycler.xml
+++ b/app/src/main/res/layout/item_home_top_recycler.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="item"
-            type="com.watermelon.moviesapp.model.response.movie.Movie" />
+            type="com.watermelon.moviesapp.model.response.movies.Movies" />
 
         <variable
             name="listener"
@@ -33,7 +33,7 @@
                 android:layout_margin="@dimen/margin4dp"
                 android:background="@color/white"
                 android:scaleType="centerCrop"
-                app:image = "@{item.posterPath}"
+                app:image="@{item.posterPath}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/avatars" />
