--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -44,7 +44,11 @@
         android:id="@+id/fragment_main"
         android:name="com.watermelon.moviesapp.main.MainFragment"
         android:label="mainFragment"
-        tools:layout="@layout/fragment_main"/>
+        tools:layout="@layout/fragment_main">
+        <action
+            android:id="@+id/action_fragment_main_to_genreFragment"
+            app:destination="@id/genreFragment" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.watermelon.moviesapp.ui.profile.ProfileFragment"
@@ -52,6 +56,15 @@
         tools:layout="@layout/fragment_profile">
         <argument
             android:name="personId"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/genreFragment"
+        android:name="com.watermelon.moviesapp.ui.genres.GenreFragment"
+        android:label="GenreFragment"
+        tools:layout="@layout/fragment_genres">
+        <argument
+            android:name="genreId"
             app:argType="integer" />
     </fragment>
 </navigation>
