--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="margin8dp">8dp</dimen>
     <dimen name="margin4dp">4dp</dimen>
     <dimen name="text12sp">12sp</dimen>
+    <dimen name="margin1x">8dp</dimen>
 </resources>
