--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -27,7 +27,7 @@
         android:id="@+id/detailsFragment"
         android:name="com.watermelon.moviesapp.ui.details.DetailsFragment"
         android:label="DetailsFragment"
-        tools:layout="@layout/details_fragment">
+        tools:layout="@layout/fragment_details">
         <argument
             android:name="movieId"
             app:argType="integer" />
