--- a/app/src/main/res/layout/item_home_top_recycler.xml
+++ b/app/src/main/res/layout/item_home_top_recycler.xml
@@ -18,10 +18,11 @@
         android:layout_height="match_parent">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="225dp"
-            android:layout_margin="@dimen/margin8dp"
-            app:cardCornerRadius="@dimen/margin8dp"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="24dp"
             app:cardElevation="4dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -30,7 +31,6 @@
                 android:id="@+id/item_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="@dimen/margin4dp"
                 android:background="@color/white"
                 android:scaleType="centerCrop"
                 app:image="@{item.posterPath}"
@@ -38,16 +38,19 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/avatars" />
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floating_action_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="16dp"
-                android:contentDescription="@string/play"
-                app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
-
         </androidx.cardview.widget.CardView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floating_action_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:contentDescription="@string/play"
+            android:elevation="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/cardView"
+            app:layout_constraintEnd_toEndOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
